...
            mainNavigationController = templateNavigationController(image:
                                         imageBanknote!,
                                         tabBarItemTitle: "Курсы валют",
                                         rootViewController: mainViewController)
            
            balancesNavigationController = templateNavigationController(image:                                imageCase!,
                                         tabBarItemTitle: "Мои счета",
                                         rootViewController: balancesViewController)
            
            
            tabBarController.viewControllers = [mainNavigationController,balancesNavigationController]
        }
    }
...
