...
        label.font = UIFont(name: "OpenSansRoman-SemiBold", size: 18)
        return label
    }()

    var amountTextField: CurrencyTextField = {
        let textField = CurrencyTextField()
        textField.accessibilityIdentifier = "AmountTextField"
        return textField
    }()

    private var countryImage: UIImageView = {
        let imageView = UIImageView()
        imageView.image = UIImage(named: "kgs")
...
